--- a/app/views/restaurants/_restaurant_modal.html.erb
+++ b/app/views/restaurants/_restaurant_modal.html.erb
@@ -203,7 +203,7 @@
                           <div class="restaurant-review-name"><%= @users.find_by_id(restaurant.reviews.first.user_id).firstname %> <%= @users.find_by_id(restaurant.reviews.first.user_id).lastname %></div>
                         </div>
 
-                        <div class="row no-paading">
+                        <div class="row no-paading" style="width: 75%;">
                           <% if restaurant.reviews.first.authenticity == 5 %>
 
                             <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
@@ -242,7 +242,7 @@
                             <div class="col"><%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %></div>
                           <% end %>
                         </div>
-                        <div class="row">
+                        <div class="row" style="width: 75%;">
                           <% if restaurant.reviews.first.value == 5 %>
 
                             <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
@@ -307,7 +307,7 @@
                           <div class="restaurant-review-name"><%= @users.find_by_id(restaurant.reviews.second.user_id).firstname %> <%= @users.find_by_id(restaurant.reviews.second.user_id).lastname %></div>
                         </div>
 
-                        <div class="row no-paading">
+                        <div class="row no-paading" style="width: 75%;">
                           <% if restaurant.reviews.second.authenticity == 5 %>
 
                             <div class="col"><%= image_tag("icon_star.png", class: "img-fluid restaurant-review-star") %></div>
@@ -346,7 +346,7 @@
                             <div class="col"><%= image_tag("icon_star_negative.png", class: "img-fluid restaurant-review-star") %></div>
                           <% end %>
                         </div>
-                        <div class="row">
+                        <div class="row" style="width: 75%;">
                           <% if restaurant.reviews.second.value == 5 %>
 
                             <div class="col"><%= image_tag("icon_dimond.png", class: "img-fluid restaurant-review-star") %></div>
