--- a/app/views/restaurants/_review_form.html.erb
+++ b/app/views/restaurants/_review_form.html.erb
@@ -3,9 +3,9 @@
   <%= simple_form_for(@review) do |f| %>
     <%= f.input :dish, collection: restaurant.dishes, label: "What dish are you reviewing?", input_html: { class: "review-form-drop" } %>
 
-    <%= f.input :authenticity, label: "How authentic was it? 0 - 5", min: 0, max: 5, size: 5, input_html: { class: "review-form-range" }, as: :range %>
+    <%= f.input :authenticity, label: "How authentic was it?", collection: 1..5, class: "review-form-description" %>
 
-    <%= f.input :value, label: "How valuable was it? 0 - 5", min: 0, max: 5, size: 5, input_html: { class: "review-form-range" }, as: :range %>
+    <%= f.input :value, label: "How valuable was it?", collection: 1..5, class: "review-form-description" %>
 
     <%= f.input :description, label: "Add a comment", size: "30x10", class: "review-form-description", as: :text %>
 
